<resources>
    <string name="app_name">Moti Quotes</string>
    <string name="Info_text">Save all your favorite motivational quotes</string>
    <string name="added_on">Added on:</string>
    <string name="date_sample">24, sept 2022</string>
    <string name="my_motivation_quote">My Motivation quote</string>
    <string name="motivation_quote">Motivation Quote</string>
    <string name="save_quote">Save Quote</string>
    <string name="delete">Delete</string>
    <string name="dialog_alert_title">Delete Quote</string>
    <string name="delete_question">Are you sure you want to delete this quote</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="detail">Detail</string>
    <string name="source">Source</string>
    <string name="sourceUnknown">unknown</string>
    <string name="source2">Source:</string>
    <string name="add_moti_quote">Add Moti Quote</string>
    <string name="edit_quote">Edit Quote</string>
</resources>